--- a/FieaGameEngine/FieaGameEngine.vcxproj
+++ b/FieaGameEngine/FieaGameEngine.vcxproj
@@ -175,6 +175,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Action.h" />
+    <ClInclude Include="ActionIncrement.h" />
+    <ClInclude Include="ActionList.h" />
+    <ClInclude Include="ActionListWhile.h" />
     <ClInclude Include="Attributed.h" />
     <ClInclude Include="AttributedArmoredCore.h" />
     <ClInclude Include="AttributedFoo.h" />
@@ -196,9 +200,14 @@
     <ClInclude Include="Signature.h" />
     <ClInclude Include="TableHelper.h" />
     <ClInclude Include="Temp.h" />
+    <ClInclude Include="TestAction.h" />
     <ClInclude Include="TypeRegister.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Action.cpp" />
+    <ClCompile Include="ActionIncrement.cpp" />
+    <ClCompile Include="ActionList.cpp" />
+    <ClCompile Include="ActionListWhile.cpp" />
     <ClCompile Include="Attributed.cpp" />
     <ClCompile Include="AttributedArmoredCore.cpp" />
     <ClCompile Include="AttributedFoo.cpp" />
@@ -224,6 +233,7 @@
     <ClCompile Include="IWrapper.cpp" />
     <ClCompile Include="TableHelper.cpp" />
     <ClCompile Include="Temp.cpp" />
+    <ClCompile Include="TestAction.cpp" />
     <ClCompile Include="TypeRegister.cpp" />
   </ItemGroup>
   <ItemGroup>
