--- a/UnitTests/FieaGameEngine.test.vcxproj.filters
+++ b/UnitTests/FieaGameEngine.test.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="GameObject.test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Action.test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
